creates backend auth routes

--- a/2.backend/Pipfile
+++ b/2.backend/Pipfile
@@ -10,6 +10,8 @@ flask-migrate = "*"
 flask-cors = "*"
 psycopg2-binary = "*"
 sqlalchemy-serializer = "*"
+pyjwt = "*"
+dotenv = "*"
 
 [dev-packages]
 
