--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,8 @@
 2.backend/app/__pycache__
 2.backend/app/models/__pycache__
 2.backend/app/routes/__pycache__
+2.backend/app/routes/user/__pycache__
 2.backend/app.db
 2.backend/migrations/__pycache__
+2.backend/.env
+2.backend/instance
