--- a/1.frontend/package.json
+++ b/1.frontend/package.json
@@ -10,10 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.11.2",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
+    "crypto-js": "^4.2.0",
     "lucide-vue-next": "^0.545.0",
     "nuxt": "^4.1.2",
+    "pinia": "^3.0.3",
     "vue": "^3.5.22",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-toastify": "^0.2.8"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0"
